--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,25 @@
 @tailwind base;
+@layer base {
+  h1 {
+    @apply text-6xl;
+  }
+  h2 {
+    @apply text-4xl;
+  }
+  h3 {
+    @apply text-2xl;
+  }
+  h4 {
+    @apply text-xl;
+  }
+  h5 {
+    @apply text-base;
+  }
+  h6 {
+    @apply text-sm;
+  }
+}
 @tailwind components;
 @tailwind utilities;
 
-.App{
-max-width: 1440px;
-}
 
